--- a/gobotany/plantshare/templates/registration/logout.html
+++ b/gobotany/plantshare/templates/registration/logout.html
@@ -12,6 +12,6 @@ browser window or <a href="{% url ps-main %}">log in</a> again.</p>
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "_plantshare_minimal_navigation.html" %}
+    {% include "_plantshare_navigation.html" %}
 {% endblock %}
 
