--- a/gobotany/plantshare/templates/ask.html
+++ b/gobotany/plantshare/templates/ask.html
@@ -11,23 +11,13 @@
 
 <h2>All <a href="{% url ps-all-questions %}">Questions and Answers</a></h2>
 
-<h2 id="recent">Recently Answered Questions</h2>
+{% if questions|length > 0 %}
+    <h2 id="recent">Recently Answered Questions</h2>
+    {% include "_recent_questions.html" %}
 
-<ul class="questions">
-    {% for question in questions %}
-        <li>
-            <dl>
-                <dt>Question</dt>
-                <dd>{{ question.question }}</dd>
-                <dt>Answer
-                <span>({{ question.answered|date:"l, F j" }})</span></dt>
-                <dd>{{ question.answer }}</dd>
-            </dl>
-        </li>
-    {% endfor %}
-</ul>
-
-<p class="more"><a href="{% url ps-all-questions %}">read more »</a><p>
+    <p class="more"><a 
+        href="{% url ps-all-questions %}">All Questions and Answers »</a><p>
+{% endif %}
 
 {% endblock %}
 
