--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1027,20 +1027,19 @@ body.plantshare#ask #main h1 + img, body.plantshare#ask #main h2 + img, body.pla
 body.plantshare#ask #main form, body.plantshare#plantshare #ask form { clear: left; }
 body.plantshare#ask #main textarea, body.plantshare#plantshare #ask textarea { border: 1px solid #aaaaaa; height: 40px; margin: 0 0 1%; padding: 8px 10px; max-width: 97%; width: 97%; -webkit-box-shadow: 2px 3px 5px 0px #dddddd; -moz-box-shadow: 2px 3px 5px 0px #dddddd; box-shadow: 2px 3px 5px 0px #dddddd; }
 body.plantshare#ask #main .submit, body.plantshare#plantshare #ask .submit { float: right; text-transform: uppercase; }
-body.plantshare#ask #main { /* Ask the Botanist page */ }
-body.plantshare#ask #main h2 { clear: both; }
-body.plantshare#ask #main .more { text-align: right; }
+body.plantshare#ask #main h2, body.plantshare#ask #main h3, body.plantshare#plantshare #ask h2, body.plantshare#plantshare #ask h3 { clear: both; }
+body.plantshare#ask #main .more, body.plantshare#plantshare #ask .more { text-align: right; }
 body.plantshare#questions #main { /* Questions and Answers page */ }
 body.plantshare#questions #main #category-nav p { float: left; margin: 0; }
 body.plantshare#questions #main #category-nav ul { margin-left: 80px; }
 body.plantshare#questions #main #category-nav li { display: inline; margin-right: 8px; white-space: nowrap; }
-body.plantshare.ask #main { /* styles common to Ask the Botanist, questions pages */ }
-body.plantshare.ask #main .questions li { background-color: #f9faea; border: 1px solid #c3d941; margin: 5px 0 10px; padding: 10px 12px; }
-body.plantshare.ask #main .questions dl { margin: 0; padding: 0; }
-body.plantshare.ask #main .questions dt { font-weight: bold; margin-top: 10px; }
-body.plantshare.ask #main .questions dt:first-child { margin-top: 0; }
-body.plantshare.ask #main .questions dt span { font-weight: normal; }
-body.plantshare.ask #main .questions dd { margin: 0; }
+body.plantshare .questions { /* styles common to Ask the Botanist, questions pages */ }
+body.plantshare .questions li { background-color: #f9faea; border: 1px solid #c3d941; margin: 5px 0 10px; padding: 10px 12px; }
+body.plantshare .questions dl { margin: 0; padding: 0; }
+body.plantshare .questions dt { font-weight: bold; margin-top: 10px; }
+body.plantshare .questions dt:first-child { margin-top: 0; }
+body.plantshare .questions dt span { font-weight: normal; }
+body.plantshare .questions dd { margin: 0; }
 body.plantshare#profile div.section-container { position: relative; }
 body.plantshare#profile div.section-container .save-btn { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -272px -231px; width: 99px !important; height: 32px; font-size: 0; -moz-box-shadow: 0 !important; border: 0 none !important; display: block; text-indent: -9999px; }
 body.plantshare#profile div.section-container .image-modal { background-color: white; border: 5px solid #acac90; display: none; padding: 15px; position: absolute; width: 400px; height: 160px; z-index: 10; }
