Make it possible to display filter choices inline on small screens.
Each time a filter question is selected, attach the working area
immediately after it. (#308)

--- a/gobotany/simplekey/templates/level3_test_links.html
+++ b/gobotany/simplekey/templates/level3_test_links.html
@@ -15,9 +15,10 @@
             href="/simple/woody-plants/woody-gymnosperms/">split</a>
             |
             <a target="_blank"
-            href="/simple/woody-plants/woody-gymnosperms/?m=mobile-wide">wide</a>
+                href="/simple/woody-plants/woody-gymnosperms/?m=mobile-wide">wide</a>
             |
-            inline
+            <a target="_blank"
+                href="/simple/woody-plants/woody-gymnosperms/?m=mobile-wide%20mobile-inline">inline</a>
         </p>
 
     </body>
